--- a/php/login/adduser.html
+++ b/php/login/adduser.html
@@ -84,7 +84,7 @@
                                                 <span class="input-group-addon">
                                                     <i class="glyphicon glyphicon-lock"></i>
                                                 </span>
-                                                <input class="form-control" placeholder="Username" name="username" type="password" id="userPassword" value="">
+                                                <input class="form-control" placeholder="Username" name="username" type="text" id="userPassword" value="">
                                             </div>
                                         </div>
                                         <div class="form-group">
