--- a/php/login/adduser.html
+++ b/php/login/adduser.html
@@ -66,7 +66,7 @@
                                         <div class="form-group">
                                             <div class="input-group">
                                                 <span class="input-group-addon">
-                                                    <i class="glyphicon glyphicon-user"></i>
+                                                    <i class="glyphicon glyphicon-folder-open"></i>
                                                 </span> 
                                                 <input class="form-control" placeholder="Registrar" name="register" type="text" id="userPassword" autofocus>
                                             </div>
@@ -82,7 +82,7 @@
                                         <div class="form-group">
                                             <div class="input-group">
                                                 <span class="input-group-addon">
-                                                    <i class="glyphicon glyphicon-lock"></i>
+                                                    <i class="glyphicon glyphicon-user"></i>
                                                 </span>
                                                 <input class="form-control" placeholder="Username" name="username" type="text" id="userPassword" value="">
                                             </div>
